tests/NormalTests/paczka1/fuzzy1/28333286.err
Error in line 1: zSA104mVy A772 28,1
Error in line 10: 6C4GA A337 98,6
Error in line 7: IF5b S149 36,8
Error in line 31: 6C4GA S149 16,7
Error in line 38: A772 S149 83,0
